--- a/hire.html
+++ b/hire.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Chris Yawman | Website and Database Debugging</title>
-        <link rel="stylesheet" href="styles.css" type="text/css" />
+        <link rel="stylesheet" href="/styles.css" type="text/css" />
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -24,9 +24,9 @@
             <nav>
                 <div class="width">
                     <ul>
-                        <li class="start"><a href="index.html">Home</a></li>
-                        <li class="end"><a href="about.html">About Me</a></li>
-                        <li class="end selected"><a href="hire.html">Hire Me</a></li>
+                        <li class="start"><a href="/">Home</a></li>
+                        <li class="end"><a href="/about.html">About Me</a></li>
+                        <li class="end selected"><a href="/hire.html">Hire Me</a></li>
                     </ul>
                 </div>
             </nav>
@@ -44,12 +44,12 @@
                 </section>                
                 <aside class="sidebar">                    
                     <ul>
-                        <li style="margin-top:20px;"><img src="images/photo.jpg" alt="Chris Yawman" style="padding: 7px; border: 1px solid #00A0EB" /></li>
+                        <li style="margin-top:20px;"><img src="/images/photo.jpg" alt="Chris Yawman" style="padding: 7px; border: 1px solid #00A0EB" /></li>
                         <li>
                             <h4>About Me</h4>
                             <ul>
                                 <li class="text">
-                                    <p style="margin: 0;">Over 10 years of experience in website development. I specialize in the development and operations (DevOps) of PHP applications. <br /><a href="about.html" class="readmore">Read More &raquo;</a></p>
+                                    <p style="margin: 0;">Over 10 years of experience in website development. I specialize in the development and operations (DevOps) of PHP applications. <br /><a href="/about.html" class="readmore">Read More &raquo;</a></p>
                                 </li>
                             </ul>
                         </li>                        
