--- a/hire.html
+++ b/hire.html
@@ -40,6 +40,8 @@
                         <h2>Contact Me</h2>
                         <h3>cyawman@gmail.com</h3>
                         <p>Send me an email and let me know you need help with your website.</p>
+                        <h2>Resume</h2>
+                        <p>Download the latest version of <a href="/assets/christopheryawman.pdf" title="Christopher Yawman Resume">my resume</a>.</p>
                     </article>                    
                 </section>                
                 <aside class="sidebar">                    
